<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ImmediateMemory</string>
    <string name="action_settings">Settings</string>
    <string name="number_lbl">Line Number</string>
    <string name="time_lbl">Time</string>
    <string name="time_txt">3</string>
    <string name="time_hint">Span time for memory</string>
    <string name="start_btn">Start</string>

    <string-array name="number_array">
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>

    <string name="title_activity_nine_btn">Recall the Number Order</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_result">ResultActivity</string>

</resources>