<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
	android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical"
    tools:context=".SettingActivity" >

    <TextView
        android:id="@+id/number_lbl"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/number_lbl"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Spinner
        android:id="@+id/number_spnr"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="right"/>

    <TextView
        android:id="@+id/time_lbl"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/time_lbl"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/time_txt"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:hint="@string/time_hint"
        android:inputType="numberDecimal"
        android:text="@string/time_txt" />
   
   <Button
        android:id="@+id/start_btn"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@string/start_btn"
        android:onClick="onStart" />

</LinearLayout>